<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">WiFiCamera</string>
    <string name="label_file_browser">File Browser</string>
    <string name="label_camera_control">Camera Control</string>
    <string name="label_network_configurations">Network Configurations</string>
    <string name="label_camera_settings">Camera Settings</string>
    <string name="label_video_resolution">Definition</string>
    <string name="label_image_resolution">Image Resolution</string>
    <string name="label_motion_detection">Motion Detection</string>
    <string name="label_record_voice">Recorder Voice</string>
    <string name="label_formart_cam">Format Camera SD Card</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_flicker_frequency">Flicker Frequency</string>
    <string name="label_50Hz">50Hz</string>
    <string name="label_60Hz">60Hz</string>
    <string name="label_white_balance">White Balance</string>
    <string name="label_auto">Auto</string>
    <string name="label_daylight">Daylight</string>
    <string name="label_fluorescent">Fluorescent</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_contrast">Contrast</string>
    <string name="label_exposure">Exposure</string>
    <string name="label_ip_camera_control">Camera Control</string>
    <string name="label_ip_camera_preview">Camera Preview</string>
    <string name="label_ip_camera_browser">Camera File Browser</string>
    <string name="label_local_album">Local Album</string>
    <string name="label_wifi_ssid">SSID:</string>
    <string name="label_encryption_key">Key : </string>
    <string name="label_update">Update</string>
    <string name="label_re_activate_network">Reset</string>
    <string name="label_find_camera">Find Camera</string>
    <string name="label_title">Title</string>
    <string name="label_time0">0:00</string>
    <string name="label_app_snapshot">App Snapshot</string>
    <string name="label_app_record">App Record</string>
    <string name="label_stop_record">Stop Recording</string>
    <string name="dialog_no_connection_title">Please check your WiFi setup:</string>
    <string name="dialog_no_connection_message">1. Make sure camera\'s WiFi is turned on.\n2. Make sure device\'s WiFi is turned on.\n3. Connect to your camera\'s network.</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_open">Open</string>
    <string name="label_save">Save</string>
    <string name="label_delete">Delete</string>
    <string name="label_connect">Connect</string>
    <string name="label_video">Video</string>
    <string name="label_image">Image</string>
    <string name="label_camera_snapshot">Camera Snapshot</string>
    <string name="label_camera_record">Camera Record</string>
    <string name="label_camera_stop_record">Camera Stop Recording</string>
    <string name="label_camera_language">Language</string>
    <string name="message_command_succeed">Command Succeed!</string>
    <string name="message_command_failed">Command Failed!</string>
    <string name="message_fail_get_info">Failed to get camera information.</string>
    <string name="error_no_ssid">Please enter WiFi SSID.</string>
    <string name="error_ssid_too_long">SSID is too long.</string>
    <string name="error_no_key">Please enter encryption key.</string>
    <string name="error_key_too_short">Key is too short.</string>
    <string name="error_key_too_long">Key is too long.</string>
    <string name="label_language">Language</string>
    <string name="label_default">System Default</string>
    <string name="label_reading">Reading</string>
    <string name="label_items">items</string>
    <string name="message_save_video">Video files will be stored in local storage under directory</string>
    <string name="message_start_recording">Start Video Recording</string>
    <string name="app_Version">APP Version</string>
    <string name="FW_Version">Firmware Version</string>
    <string name="label_delete_files">Delete Files</string>
    <string name="AWB_Auto">Auto</string>
    <string name="AWB_Daylight">Daylight</string>
    <string name="AWB_Cloudy">Cloudy</string>
    <string name="AWB_Fluorescent_W">Fluorescent (White)</string>
    <string name="AWB_Fluorescent_N">Fluorescent (Natural)</string>
    <string name="AWB_Fluorescent_D">Fluorescent (Daylight)</string>
    <string name="AWB_Incandescent">Incandescent</string>
    <string name="Delete_All_Images">Delete all images</string>
    <string name="Delete_All_Videos">Delete all videos</string>
    <string name="label_Off">Off</string>
    <string name="label_Low">Low</string>
    <string name="label_Middle">Middle</string>
    <string name="label_High">High</string>
    <string name="Flicker_50">50 Hz</string>
    <string name="Flicker_60">60 Hz</string>
    <string name="dialog_DHCP_error">Please check your DHCP setup</string>
    <string name="Timesettings">Time Settings</string>
    <string name="SyncDevice">Synchronized with the device</string>
    <string name="label_Close">Close</string>
    <string name="label_net_disconnected">Network disconnected</string>

    <!-- end title -->
    <string name="end_title_recordcard">Recorder SD　card</string>
    <string name="end_title_localfile">Local File</string>
    <string name="end_title_setting">Setting</string>
    <string name="end_title_setting_wifi">WI-FI Setting</string>
    <string name="end_title_setting_face">Face Setting</string>

    <!-- definition -->
    <string name="definition_high">UHQ</string>
    <string name="definition_midle">HDV</string>
    <string name="definition_low">FLU</string>

    <!-- motify WIFI SSID -->
    <string name="mod_wifi_ssid">Motify WIFI SSID</string>
    <string name="mod_wifi_pw">Motify WIFI Passwd</string>
    <string name="regist_ok">Sure</string>
    <string name="regist_cancel">Cancel</string>
    <string name="set_ssid_old">Device : </string>
    <string name="set_ssid_new">New Device</string>
    <string name="set_passwd_old">Old ：</string>
    <string name="set_passwd_new">New ：</string>
    <string name="motify_others"> SET </string>

    <!-- current voideo -->
    <string name="curr_void_pause">pause</string>
    <string name="curr_void_play">record</string>
    <string name="curr_void_start">start</string>
     <string name="take_photo_sscuss">saved to SD card</string>

    <!-- make sure to format -->
    <string name="notice_title">Notice</string>
    <string name="notice_title_ok">Sure</string>
    <string name="notice_title_cnl">Cancel</string>
    <string name="make_sure_to_format">Are sure to format camera SD card ？</string>
    <string name="ntic_old_device">Old Device:</string>
    <string name="ntic_new_device">New Device:</string>

    <!-- notice string -->
	<string name="ntc_sav_to_sd">saved to cellphone canbe browsed</string>
</resources>