<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300sp"
    android:background="@color/light_grey"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/fontStyle"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/mod_wifi_ssid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" >

        <TextView
            style="@style/fontStyle"
            android:layout_width="100sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ntic_old_device" />

        <TextView
            android:id="@+id/tv_mod_ssid_old"
            style="@style/fontStyle"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:background="@color/bg_color"
            android:gravity="center|left"
            android:text="@string/set_ssid_old" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp" >

        <TextView
            style="@style/fontStyle"
            android:layout_width="100sp"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ntic_new_device" />

        <EditText
            android:id="@+id/et_mod_ssid_new"
            style="@style/fontStyle"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:background="@color/bg_color"
            android:digits="1234567890"
            android:gravity="center|left"
            android:hint="@string/set_ssid_new"
            android:inputType="textPassword|phone"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ssid_ok"
            style="@style/fontStyle"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:text="@string/regist_ok" />

        <Button
            android:id="@+id/btn_ssid_cnl"
            style="@style/fontStyle"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginLeft="60sp"
            android:text="@string/regist_cancel" />
    </LinearLayout>

</LinearLayout>