<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"
    android:orientation="vertical" >

    <TextView
        style="@style/fontStyle"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/notice_title" />

    <TextView
        style="@style/fontStyle"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/make_sure_to_format" />

    <LinearLayout
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_set_ok"
            style="@style/fontStyle"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:text="@string/regist_ok" />

        <Button
            android:id="@+id/btn_set_cancel"
            style="@style/fontStyle"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginLeft="20sp"
            android:text="@string/regist_cancel" />
    </LinearLayout>

</LinearLayout>