<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <include
        android:id="@+id/frag_header"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/group_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="10sp"
            android:text="@string/label_video_resolution"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="60sp"
            android:layout_weight="2"
            android:background="@drawable/group_background"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_high"
                android:layout_width="70sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/definition_high"
                android:textColor="@color/light_grey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_mindle"
                android:layout_width="70sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_marginLeft="1sp"
                android:background="@color/light_white"
                android:gravity="center"
                android:text="@string/definition_midle"
                android:textColor="@color/light_grey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_low"
                android:layout_width="70sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_marginLeft="1sp"
                android:background="@color/light_white"
                android:gravity="center"
                android:text="@string/definition_low"
                android:textColor="@color/light_grey"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:background="@drawable/group_background"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="7"
            android:gravity="center|left"
            android:text="@string/label_motion_detection"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivSettMotDet"
            android:layout_width="100sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:clickable="true"
            android:contentDescription="@string/label_motion_detection"
            android:gravity="center"
            android:src="@drawable/on_switch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:background="@drawable/group_background"
        android:orientation="horizontal"
        android:weightSum="10" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="7"
            android:gravity="center|left"
            android:text="@string/label_record_voice"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivCamSettVoic"
            android:layout_width="100sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:clickable="true"
            android:contentDescription="@string/label_motion_detection"
            android:gravity="center"
            android:src="@drawable/off_switch" />
    </LinearLayout>

</LinearLayout>