<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <include
        android:id="@+id/frag_header"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/llSettSSID"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:background="@drawable/group_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/label_wifi_ssid"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/cameraControlWifiName"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:hint="@string/label_wifi_ssid"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSettKeyWord"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:background="@drawable/group_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/label_encryption_key"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/cameraControlWifiEncryptionKey"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:background="@drawable/group_background"
            android:hint="@string/label_encryption_key"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="20sp"
        android:gravity="center" >

        <Button
            android:id="@+id/cameraControlResetButton"
            android:layout_width="160sp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:textSize="25sp"
            android:text="@string/label_re_activate_network"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>